# digihaul

./: .gitignore  Dockerfile  Pipfile  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
components/: __init__.py  carrier_frequencies.pkl  dataset_processor.py  feature_processor.py  labeller.pkl  power_transformer.pkl
data/: New_bookings.csv  New_bookings_with_predictions.csv  sample_with_api_response.csv  test_data.csv  test_predictions.csv  train_predictions.csv  training_data.csv  training_data_with_lat_lon.csv
notebooks/: data_exploration.ipynb  data_exploration_cleaning.ipynb  distancematrix_api.ipynb  eda.ipynb  modelling.ipynb  presentation_visuals.ipynb
presentation/: Delivery Delay Prediction.pptx  ~$Delivery Delay Prediction.pptx
scripts/: create_feature_store.py  feature_store.py
